--- a/spring4-validator/src/main/messages/messages.properties
+++ b/spring4-validator/src/main/messages/messages.properties
@@ -1,9 +1,15 @@
-user.id.null=用户编号不能为空
-user.name.null=用户名不能为空
-user.name.length.illegal=用户名[${validatedValue}--${formatter.format("%04d", min)}]长度必须在5到20之间
-user.name.illegal=用户名必须是字母
-user.password.null=密码不能为空
-forbidden.word=您输入的数据中有非法关键词【{word}】
-password.null=密码不能为空
-password.confirmation.null=确认密码不能为空
-password.confirmation.error=两次输入的密码不一样
+user.id.null=\u7528\u6237\u7F16\u53F7\u4E0D\u80FD\u4E3A\u7A7A
+user.name.null=\u7528\u6237\u540D\u4E0D\u80FD\u4E3A\u7A7A
+user.name.length.illegal=\u7528\u6237\u540D[${validatedValue}--${formatter.format("%04d", min)}]\u957F\u5EA6\u5FC5\u987B\u57285\u523020\u4E4B\u95F4
+user.name.illegal=\u7528\u6237\u540D\u5FC5\u987B\u662F\u5B57\u6BCD
+user.password.null=\u5BC6\u7801\u4E0D\u80FD\u4E3A\u7A7A
+forbidden.word=\u60A8\u8F93\u5165\u7684\u6570\u636E\u4E2D\u6709\u975E\u6CD5\u5173\u952E\u8BCD\u3010{word}\u3011
+password.null=\u5BC6\u7801\u4E0D\u80FD\u4E3A\u7A7A
+password.confirmation.null=\u786E\u8BA4\u5BC6\u7801\u4E0D\u80FD\u4E3A\u7A7A
+password.confirmation.error=\u4E24\u6B21\u8F93\u5165\u7684\u5BC6\u7801\u4E0D\u4E00\u6837
+
+###
+org.o.null=org\u4E0D\u80FD\u4E3A\u7A7A
+org.id.null=org\u7F16\u53F7\u4E0D\u80FD\u4E3A\u7A7A
+org.name.length.illegal=org\u957F\u5EA6\u5FC5\u987B\u57285\u523020\u4E4B\u95F4
+org.name.illegal=org\u540D\u5FC5\u987B\u662F\u5B57\u6BCD
