--- a/spring4-validator/src/main/messages/messages.properties
+++ b/spring4-validator/src/main/messages/messages.properties
@@ -13,3 +13,5 @@ org.o.null=org\u4E0D\u80FD\u4E3A\u7A7A
 org.id.null=org\u7F16\u53F7\u4E0D\u80FD\u4E3A\u7A7A
 org.name.length.illegal=org\u957F\u5EA6\u5FC5\u987B\u57285\u523020\u4E4B\u95F4
 org.name.illegal=org\u540D\u5FC5\u987B\u662F\u5B57\u6BCD
+
+can.not.less = must be greater than or equal to {value}
